--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <!-- App mount point -->
-    <div data-app></div>
+    <div id="app" data-app></div>
 
     <script src="h264bitstream.js"></script>
 
